# Apple-Grading-System

./: .gitignore  README.md
Application/: Application.pro  SavedParameters.txt  mainwindow.ui  test
Application/doc/: doxygen.conf
Application/include/: BluetoothService.h  ImageProcessModule.h  ImageProcessWorker.h  MainWindow.h  UARTservice.h  motor.h
Application/src/: BluetoothService.cpp  ImageProcessModule.cpp  ImageProcessWorker.cpp  MainWindow.cpp  UARTservice.cpp  main.cpp  motor.cpp
ImageProcessing/: CMakeLists.txt  ImageProcessModule  ImageProcessModule.cpp  ImageProcessModule.h  main.cpp
ImageProcessing/doc/: doxygen.conf
ImageProcessing/include/: FeaturesVector.h  ImageProcessModule.h
ImageProcessing/src/: CMakeLists.txt  ImageProcessModule.cpp
ImageProcessing/tests/: CMakeLists.txt  main.cpp
uController/: main.c  motor.c  scheme.sch
